# Redis-Keda

./: .gitignore  README.md  helpme
consumer/: consumer-deployment.yaml  consumer-pod.yaml  consumer-scaledjob.yaml  docker-compose.yml
keda/: keda-scaler.yaml
loader/: Dockerfile  consume.py  consume_all.py  consumer-scaledjob.yaml.back  loader-scaledjob.yaml  publish.sh  pyproject.toml
mongo-loader/: loader-deployment.yaml
pinecone-loader/: loader-deployment.yaml
publisher/: Dockerfile  azure-blob-nfs-ss.yaml  azure-files-pod.yaml  azure-files-pod.yaml.back  azure-pod-blob.yaml  azurefiles-mount-options-pvc.yaml  azurefiles-pv.yaml  blob-nfs-pv.yaml  blob-nfs-pvc.yaml  docker-compose.yml  pod-blob.yaml  publish.py  publish.sh  publisher-deployment.yaml  publisher-deployment.yaml.20240508  publisher-deployment.yaml.back  publisher-pod.yaml  pv-blob-nfs.yaml  pv-nfs.yaml
redis/: redis-deployment.yaml
