[tool.poetry]
name = "redis-demo"
version = "0.1.0"
description = ""
authors = ["Zac Scott <zac.scott11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
